--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,4 +1,4 @@
-<div class="terminal-card"
+<!-- <div class="terminal-card"
         *ngIf="!isLoading">
     <header>BC:\suggested_videos</header>
     <div class="video-flex">
@@ -10,7 +10,7 @@
             </youtube-player>
         </div>
     </div>
-</div>
+</div> -->
 <div class="terminal-card">
     <header>BC:\twitter-feed</header>
     <div class="twitter-feed">
